welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:0: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:7: error: not found: type color
 def carre(c:color) {
             ^FlowerPot:11: error: not found: type color
 def pistil(c:color) {
              ^